--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,7 @@ cython_debug/
 /team_code/birds_eye_view/maps_8ppm_cv/Town12.h5
 /team_code/birds_eye_view/maps_8ppm_cv/Town13.h5
 /evaluation
+/team_code/pretrained_models
+/team_code/pretrained_models.zip
+/Bench2Drive/leaderboard/data/eval_bench2drive220_tfpp_traj
+/Bench2Drive/leaderboard/data/eval_bench2drive220_pdm_lite_traj
