--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ data/1_scenario_per_route_rm_unmanageable_v5/
 data/1_scenario_per_route_v5/
 data/no_scenario_v5/
 data/validation_split_v5/
+data/
+data_source/
+data_selected/
+data_trial/
 database/
 database_after_cvpr/
 results/
